# Courses_work_4

./: .gitignore  README.md  main.py  pyproject.toml
data/: class_hh.py  dbmanager.py  hh.py  settings.py  utils.py
