[tool.poetry]
name = "courses-work-5"
version = "0.1.0"
description = ""
authors = ["Ivan Nikitin <ivannikitin9853@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
